dev-ops/minikube/mariadb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  labels:
    application: city-navigator
    component: mariadb
    environment: sandbox
spec:
  replicas: 1
  template:
    metadata:
      name: mariadb
      labels:
        application: city-navigator
        component: mariadb
        environment: sandbox
    spec:
      containers:
        - name: mariadb
          image: jardo72/city-navigator-mariadb:latest
  selector:
    matchLabels:
      application: city-navigator
      component: mariadb
      environment: sandbox
  strategy:
    type: RollingUpdate
