dev-ops/minikube/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: city-navigator
  labels:
    application: city-navigator
    component: postgres
    environment: sandbox
spec:
  replicas: 1
  template:
    metadata:
      name: postgres
      labels:
        application: city-navigator
        component: postgres
        environment: sandbox
    spec:
      containers:
        - name: postgres
          image: jardo72/city-navigator-postgres:latest
  selector:
    matchLabels:
      application: city-navigator
      component: postgres
      environment: sandbox
  strategy:
    type: RollingUpdate
