dev-ops/minikube/prometheus-http-discovery-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-http-discovery-deployment
  namespace: city-navigator
  labels:
    application: city-navigator
    component: prometheus-http-discovery
    environment: sandbox
spec:
  replicas: 1
  template:
    metadata:
      name: prometheus-http-discovery
      labels:
        application: city-navigator
        component: prometheus-http-discovery
        environment: sandbox
    spec:
      containers:
        - name: prometheus-http-discovery
          image: jardo72/city-navigator-http-service-discovery:latest
  selector:
    matchLabels:
      application: city-navigator
      component: prometheus-http-discovery
      environment: sandbox
  strategy:
    type: RollingUpdate
