dev-ops/minikube/prometheus-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server-deployment
  namespace: city-navigator
  labels:
    application: city-navigator
    component: prometheus-server
    environment: sandbox
spec:
  replicas: 1
  template:
    metadata:
      name: prometheus-server
      labels:
        application: city-navigator
        component: prometheus-server
        environment: sandbox
    spec:
      containers:
        - name: prometheus-server
          image: prom/prometheus
  selector:
    matchLabels:
      application: city-navigator
      component: prometheus-server
      environment: sandbox
  strategy:
    type: RollingUpdate
