dev-ops/minikube/query-svc-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-svc-deployment
  namespace: city-navigator
  labels:
    application: city-navigator
    component: query-service
    environment: sandbox
spec:
  replicas: 2
  template:
    metadata:
      name: query-service
      labels:
        application: city-navigator
        component: query-service
        environment: sandbox
    spec:
      containers:
        - name: query-service
          image: jardo72/city-navigator-query-service:latest
          imagePullPolicy: Always
  selector:
    matchLabels:
      application: city-navigator
      component: query-service
      environment: sandbox
  strategy:
    type: RollingUpdate
