dev-ops/minikube/master-data-svc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: master-data-svc-service
  namespace: city-navigator
  labels:
    application: city-navigator
    component: master-data-service
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    application: city-navigator
    component: master-data-service
    environment: sandbox
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
