dev-ops/minikube/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: city-navigator
  labels:
    application: city-navigator
    component: postgres
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    application: city-navigator
    component: postgres
    environment: sandbox
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
