dev-ops/minikube/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: city-navigator
  labels:
    application: city-navigator
    component: postgres
    environment: sandbox
spec:
  replicas: 1
  template:
    metadata:
      name: postgres
      labels:
        application: city-navigator
        component: postgres
        environment: sandbox
    spec:
      containers:
        - name: postgres
          image: jardo72/city-navigator-postgres:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              protocol: TCP
  selector:
    matchLabels:
      application: city-navigator
      component: postgres
      environment: sandbox
  strategy:
    type: RollingUpdate

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: city-navigator
  labels:
    application: city-navigator
    component: postgres
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    application: city-navigator
    component: postgres
    environment: sandbox
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
