dev-ops/minikube/prometheus-http-discovery-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-http-discovery-service
  namespace: city-navigator
  labels:
    application: city-navigator
    component: prometheus-http-discovery
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    application: city-navigator
    component: prometheus-http-discovery
    environment: sandbox
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
