dev-ops/minikube/prometheus-http-discovery.yml
#
# Copyright 2023 Jaroslav Chmurny
#
# This file is part of City Navigator.
#
# City Navigator is free software developed for educational and experimental
# purposes. It is licensed under the Apache License, Version 2.0 # (the
# "License"); you may not use this file except in compliance with the
# License. You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-http-discovery-deployment
  namespace: city-navigator
  labels:
    application: city-navigator
    component: prometheus-http-discovery
    environment: sandbox
spec:
  replicas: 1
  template:
    metadata:
      name: prometheus-http-discovery
      labels:
        application: city-navigator
        component: prometheus-http-discovery
        environment: sandbox
    spec:
      containers:
        - name: prometheus-http-discovery
          image: jardo72/city-navigator-http-service-discovery:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
  selector:
    matchLabels:
      application: city-navigator
      component: prometheus-http-discovery
      environment: sandbox
  strategy:
    type: RollingUpdate

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-http-discovery-service
  namespace: city-navigator
  labels:
    application: city-navigator
    component: prometheus-http-discovery
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    application: city-navigator
    component: prometheus-http-discovery
    environment: sandbox
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
