dev-ops/minikube/prometheus-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: query-svc-service
  namespace: city-navigator
  labels:
    application: city-navigator
    component: prometheus-server
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    application: city-navigator
    component: prometheus-server
    environment: sandbox
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
