dev-ops/minikube/prometheus-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server-deployment
  namespace: city-navigator
  labels:
    application: city-navigator
    component: prometheus-server
    environment: sandbox
spec:
  replicas: 1
  template:
    metadata:
      name: prometheus-server
      labels:
        application: city-navigator
        component: prometheus-server
        environment: sandbox
    spec:
      containers:
        - name: prometheus-server
          image: prom/prometheus
          imagePullPolicy: Always
  selector:
    matchLabels:
      application: city-navigator
      component: prometheus-server
      environment: sandbox
  strategy:
    type: RollingUpdate

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server-service
  namespace: city-navigator
  labels:
    application: city-navigator
    component: prometheus-server
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    application: city-navigator
    component: prometheus-server
    environment: sandbox
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
