dev-ops/minikube/query-svc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: query-svc-service
  namespace: city-navigator
  labels:
    application: city-navigator
    component: query-service
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    application: city-navigator
    component: query-service
    environment: sandbox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
