dev-ops/minikube/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    application: city-navigator
    component: redis
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    application: city-navigator
    component: redis
    environment: sandbox
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
