dev-ops/minikube/ingress.yml

#
# Copyright 2023 Jaroslav Chmurny
#
# This file is part of City Navigator.
#
# City Navigator is free software developed for educational and experimental
# purposes. It is licensed under the Apache License, Version 2.0 # (the
# "License"); you may not use this file except in compliance with the
# License. You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# see https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: city-navigator-ingress
  namespace: city-navigator
  labels:
    application: city-navigator
    environment: sandbox
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: city-navigator.jch
      http:
        paths:
          - path: /api/query
            pathType: Prefix
            backend:
              service:
                name: query-svc-service
                port:
                  number: 8000
          - path: /api/master-data
            pathType: Prefix
            backend:
              service:
                name: master-data-svc-service
                port:
                  number: 8000
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-server-service
                port:
                  number: 9090
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
